# coinbase-pro-client-rs

./: .gitignore
coinbase-client/: Cargo.toml
coinbase-client/src/: lib.rs
coinbase-client/src/web_socket/: client.rs  common.rs  handler.rs  mod.rs  request.rs  response.rs
coinbase-scraper/: Cargo.toml  README.md
coinbase-scraper/src/: main.rs
