[package]
name = "coinbase_client"
version = "0.1.0"
authors = ["Fredi Šarić <fredi.saric.94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.57"
log = "0.4"
chrono = { version = "0.4.15", features = [ "serde" ] }
bigdecimal = { version = "0.1.2", features = [ "serde" ] }
thiserror = "1.0.20"
url = "2.1.1"
tungstenite = "0.11.1"
crossbeam = "0.7"