[package]
name = "coinbase-scraper"
version = "0.1.0"
authors = ["Fredi Šarić <fredi.saric.94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coinbase = { path = "../coinbase-client", package = "coinbase_client" }
serde = "1.0"
serde_json = "1.0.57"
log = "0.4.11"
url = "2.1.1"
env_logger = "0.7.1"
anyhow = "1.0.32"
clap = "3.0.0-beta.1"
tungstenite = "0.11.1"
crossbeam = "0.7"